--- a/webs/templates/cart.html
+++ b/webs/templates/cart.html
@@ -69,20 +69,20 @@
             </div>
           </div>
 
-          {% for i in shop %}
-          <div class="container my-5">
+          <div class="container">
             <div class="row">
-              <div class="col-md-4">
-                <img src="/media/{{i.pimage}}" alt="" class="img-fluid" height="150px" width="150px">
-              </div>
-              <div class="col-md-8">
-                {{i.pname}}
-                <br>
-                {{i.price}}
+              <div class="col-md-12">
+                <div class="row">
+                  <div class="col-md-2"></div>
+                  <div class="col-md-2"></div>
+                  <div class="col-md-2"></div>
+                  <div class="col-md-2"></div>
+                  <div class="col-md-2"></div>
+                  <div class="col-md-2"></div>
+                </div>
               </div>
             </div>
           </div>
-          {% endfor %}
 
 
           <footer>
