--- a/webs/templates/shop.html
+++ b/webs/templates/shop.html
@@ -77,6 +77,9 @@
                   <form action="addtocart" method="post" style="width: 100%;">
                     {% csrf_token %}
                   <input type="text" value="{{i.id}}" name="nm" hidden>
+                  <input type="text" value="{{i.pname}}" name="nm1" hidden>
+                  <input type="text" value="{{i.price}}" name="nm2" hidden>
+                  <input type="text" value="{{i.pimage}}" name="nm3" hidden>
                   <button class="hvbtn" type="submit">ADD TO CART</button>
                   </form>
                 </div>
