--- a/webs/templates/cart.html
+++ b/webs/templates/cart.html
@@ -84,7 +84,7 @@
                 </div>
               </div>
               <div class="col-md-12">
-                <div class="d-flex justify-content-around align-items-center">
+                <div class="d-flex justify-content-evenly align-items-center">
                   <div class="col-2">{{i.pid}}</div>
                   <div class="col-2">
                     <img src="/media/{{i.pimage}}" class="img-fluid" height="70px" width="70px" alt="">
