--- a/webs/templates/forgot.html
+++ b/webs/templates/forgot.html
@@ -67,73 +67,52 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h1>My Account</h1>
+                        <h1>Forgot Password</h1>
                     </div>
                     <div class="col-md-6 d-flex align-items-center justify-content-end">
-                        <p class="m-0">> My Account</p>
+                        <p class="m-0">> Forgot Password</p>
                     </div>
                 </div>
             </div>
           </div>
+
           {% for message in messages %}
           <div class="alert alert-{{ message.tags }} alert-dismissible">
             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
             <strong>** GBACKPACK **</strong> {{ message }}
           </div>
           {% endfor %}
+
+
           <div class="container my-5">
             <div class="row">
               <div class="col-md-12 text-center">
-                <h1>Login</h1>
+                <h1>Forgot Password</h1>
               </div>
-              <form action="logininfo" method="post">
+              <form action="forgotten" method="post">
                 {% csrf_token %}
               <div class="d-flex justify-content-center align-items-center mt-5">
               <div class="col-md-6 col-12 bdr1 p-4">
                 <p>Username or email address *</p>
-                <input type="text" name="eminm" style="width: 100%;height: 50px;padding-left: 20px;">
+                <input type="text" name="emnem" style="width: 100%;height: 50px;padding-left: 20px;">
                 <p class="mt-2">Password *</p>
                 <input type="password" name="lgpass" style="width: 100%;height: 50px;padding-left: 20px;">
+                <p class="mt-2">Enter Again  *</p>
+                <input type="password" name="lgpa" style="width: 100%;height: 50px;padding-left: 20px;">
                 <br>
                 <input type="checkbox" class="mt-3" required>
                 <span>Remember me</span>
                 <br>
                 <div class="col-md-12 d-flex justify-content-center mt-3">
-                  <button class="w-75 btn-1">LOG IN</button>
+                  <button class="w-75 btn-1">SUBMIT</button>
                 </div>
-                <a href="forgot" class="b clb text-decoration-none"><p class="text-center b mt-4">Lost your password?</p></a>
+                <a href="account" class="b clb text-decoration-none"><p class="text-center b mt-4">Log In</p></a>
                 <p class="text-center">Dont have account? <a href="sign" class="b clb">Sign Up</a></p>
               </div>
             </div>
           </form>
             </div>
           </div>
-
-          <div class="container my-5">
-            <div class="row">
-              <div class="col-md-12 d-flex justify-content-center align-items-center">
-                {% for i in store %}
-                <table cellpadding="5px">
-                  <tr>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Phone no.</th>
-                    <th>Address</th>
-                  </tr>
-                  <tr>
-                    <td>{{i.uname}}</td>
-                    <td>{{i.umail}}</td>
-                    <td>{{i.phn}}</td>
-                    <td>{{i.adrs}}</td>
-                  </tr>
-                </table>
-                {% endfor %}
-              </div>
-            </div>
-          </div>
-
-
-
 
 
 
